; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_kperf_backtracing.c_recurse_b.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_kperf_backtracing.c_recurse_b.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRIGGERING_DEBUGID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32)* @recurse_b to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @recurse_b(i64 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = icmp eq i32 %6, 0
  br i1 %7, label %8, label %18

8:                                                ; preds = %2
  %9 = load i64, i64* %4, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %8
  %12 = load i64, i64* %4, align 8
  %13 = call i32 @dispatch_semaphore_signal(i64 %12)
  br label %14

14:                                               ; preds = %14, %11
  br label %14

15:                                               ; preds = %8
  %16 = load i32, i32* @TRIGGERING_DEBUGID, align 4
  %17 = call i32 @kdebug_trace(i32 %16, i32 0, i32 0, i32 0, i32 0)
  store i32 0, i32* %3, align 4
  br label %24

18:                                               ; preds = %2
  %19 = load i64, i64* %4, align 8
  %20 = load i32, i32* %5, align 4
  %21 = sub i32 %20, 1
  %22 = call i32 @recurse_a(i64 %19, i32 %21)
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %18, %15
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @dispatch_semaphore_signal(i64) #1

declare dso_local i32 @kdebug_trace(i32, i32, i32, i32, i32) #1

declare dso_local i32 @recurse_a(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
